--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,10 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'vendor/main', include: '*.jar')
-    compile fileTree(dir: 'vendor/postgresql-jdbc', include: '*.jar')
-    testCompile fileTree(dir: 'vendor/test', include: '*.jar')
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.+'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.12.v20180830'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.+'
+    runtime group: 'org.slf4j', name: 'slf4j-simple', version: '1.+'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
