Changed: add stage to build.grade

--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,5 @@ task copyRuntimeDependencies(type: Copy) {
     from configurations.runtime
 }
 
+// stage task is used by Heroku
+task stage(dependsOn: ['assemble', 'copyRuntimeDependencies'])
